# ContextForge

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
src/contextforge/: ask.py  chunking.py  cli.py  config.py  embeddings.py  eval.py  faithfulness.py  hybrid.py  ingest.py  llm.py  phase2_graph.py  qdrant_store.py  rerank.py  search.py  sparse_bm25.py
src/contextforge/loaders/: __init__.py  base.py  docx_loader.py  html_loader.py  markdown_loader.py  pdf_loader.py  registry.py
